Fix safari image clipping issue (see disc)
https://github.com/vercel/next.js/issues/21914#issuecomment-777886877

--- a/src/styles/MP3Container.module.css
+++ b/src/styles/MP3Container.module.css
@@ -47,6 +47,7 @@
 
 .MP3CoverArt {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  font-size: 0;
 }
 
 .MP3Player {
